Fixed Load resize listener, fixed overflow on phone

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    display: flex; align-items: center;
+    display: flex; align-items: center; overflow: hidden;
 }
 section{
     display: flex;
